[gd_scene load_steps=2 format=3 uid="uid://dsduw3ff7vq3c"]

[ext_resource type="Script" path="res://LobbyScreenController.gd" id="1_nuac1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nuac1")

[node name="CreateGame" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.175
anchor_top = 0.75
anchor_right = 0.35
anchor_bottom = 0.85
text = "Create a game
"

[node name="RefreshList" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.425
anchor_top = 0.025
anchor_right = 0.525
anchor_bottom = 0.125
text = "Refresh
"

[node name="JoinGame" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.65
anchor_bottom = 0.85
text = "Join with code"

[node name="JoinCode" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.655
anchor_top = 0.75
anchor_right = 0.825
anchor_bottom = 0.85
placeholder_text = "4 Letter code"
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.7
offset_right = -0.200012
offset_bottom = 0.695984

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[connection signal="pressed" from="CreateGame" to="." method="_on_create_game_pressed"]
[connection signal="pressed" from="RefreshList" to="." method="_on_refresh_list_pressed"]
